2012-09-20  Dirk Pranke  <dpranke@chromium.org>

        roll Chromium to r157829.

        Unreviewed, deps change.

        * DEPS:

2012-09-20  Nate Chapin  <japhet@chromium.org>

        Unreviewed, chromium win build fix.
        Remove spurious reference to the non-existent
        tests/LayerPainterChromium.h in WebKit.gypi.

        * WebKit.gypi:

2012-09-20  James Robinson  <jamesr@chromium.org>

        [chromium] Remove unused copy of chromium compositor implementation files
        https://bugs.webkit.org/show_bug.cgi?id=97255

        Reviewed by Adam Barth.

        * WebKit.gyp:
        * WebKit.gypi:
        * WebKitUnitTests.gyp:
        * src/WebAnimationCurveCommon.cpp: Removed.
        * src/WebAnimationCurveCommon.h: Removed.
        * src/WebAnimationImpl.cpp: Removed.
        * src/WebAnimationImpl.h: Removed.
        * src/WebContentLayerImpl.cpp: Removed.
        * src/WebContentLayerImpl.h: Removed.
        * src/WebExternalTextureLayerImpl.cpp: Removed.
        * src/WebExternalTextureLayerImpl.h: Removed.
        * src/WebFloatAnimationCurveImpl.cpp: Removed.
        * src/WebFloatAnimationCurveImpl.h: Removed.
        * src/WebIOSurfaceLayerImpl.cpp: Removed.
        * src/WebIOSurfaceLayerImpl.h: Removed.
        * src/WebImageLayerImpl.cpp: Removed.
        * src/WebImageLayerImpl.h: Removed.
        * src/WebLayerImpl.cpp: Removed.
        * src/WebLayerImpl.h: Removed.
        * src/WebLayerTreeViewImpl.cpp: Removed.
        * src/WebLayerTreeViewImpl.h: Removed.
        * src/WebScrollbarLayerImpl.cpp: Removed.
        * src/WebScrollbarLayerImpl.h: Removed.
        * src/WebSolidColorLayerImpl.cpp: Removed.
        * src/WebSolidColorLayerImpl.h: Removed.
        * src/WebToCCInputHandlerAdapter.cpp: Removed.
        * src/WebToCCInputHandlerAdapter.h: Removed.
        * src/WebTransformAnimationCurveImpl.cpp: Removed.
        * src/WebTransformAnimationCurveImpl.h: Removed.
        * src/WebVideoLayerImpl.cpp: Removed.